* Enhanced: all form settings except `submit_size`, `submit_type` and `required_html` can now be overridden on a per-field basis by providing the setting name and its intended value as a shortcode attribute
* Enhanced: a new value 'none' is now supported for the `layout` form setting which will prevent any wrapper from rendering; it is recommended to only use this for advanced field layouts
* Enhanced: `input_before` and `input_after` now support HTML by putting something like `{input_before}<span>Content before</span>{/input_before} into the content of a field shortcode (make sure to use curly braces); this method is now recommended and takes precedence over the old way
* Fixed: the label of the `free_text` option in radio buttons / checkboxes is now displayed correctly

= 1.3.1 =
* Enhanced: alerts can now be made dismissible by defining the constant `CF7BS_ALERT_DISMISSIBLE`
* Fixed: properly add `for` attributes to labels for checkbox and radio groups for accessibility
* Fixed: wrapped checkbox and radio groups with `<fieldset>` for accessibility; needs to be manually enabled by defining the constant `CF7BS_FIELDSET_WRAP` (because of possible backwards compatibility issues with styling)
* Fixed: ID is no longer created for button groups which have an empty ID specified

= 1.3.0 =
* Added: the new Google reCAPTCHA shortcode is now supported
* Enhanced: added an additional filter to adjust form field arguments
* Enhanced: a notice in the admin is now shown if the plugin cannot be initialized
* Enhanced: language files no longer bundled in the plugin; now completely relies on language packs
* Fixed: form element errors are now displayed correctly on horizontal forms and hidden on inline forms
* Fixed: plugin constant definitions now happen on 'plugins_loaded' hook
* Fixed: typo 'dismissable' in alert setting / class is now 'dismissible'
* Fixed: readme link to 'Additional Settings' now translateable

= 1.2.4 =