@@ -149,6 +149,7 @@ function cf7bs_text_shortcode_handler( $tag ) {
 		'maxlength'			=> $tag_obj->get_maxlength_option(),
 		'tabindex'			=> $tag_obj->get_option( 'tabindex', 'int', true ),
 		'wrapper_class'		=> $tag_obj->name,
+		'label_class'       => $tag_obj->get_option( 'label_class', 'class', true ),
 		'input_before'		=> $input_before,
 		'input_after'		=> $input_after,
 	), $tag_obj->basetype, $tag_obj->name ) );
